Melhor organização das pastas do projeto.

--- a/views/ListagemPaciente/listagemPaciente.ejs
+++ b/views/ListagemPaciente/listagemPaciente.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Listagem Pacientes</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="ListagemPaciente.css">
+    <link rel="stylesheet" href="/css/listagemPaciente.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mohave:ital,wght@0,300..700;1,300..700&display=swap"
@@ -47,7 +47,7 @@
 
         <div class="paciente">
             <!-- Imagem do perfil do paciente -->
-            <img src="/img/Ellipse 3.png" alt="" id="img-patient">
+            <img src="/img/Ellipse%203.png" alt="" id="img-patient">
             <!-- Nome da pessoa -->
             <div class="nome-paciente">
                 <a href=""> <p style="font-size: x-large;">Sonia Rodrigues | 58a</p> </a>
