--- a/views/Home/home.ejs
+++ b/views/Home/home.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
-    <link rel="stylesheet" href="HomeStyle.css">
+    <link rel="stylesheet" href="/css/home.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mohave:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
@@ -20,7 +20,7 @@
     <div class="barraLateral">
         <div class="profileBackground">
             <a href="" class="nome">    
-                <img class="profilePic" src="img/placeholder.jpg" alt="perfil">
+                <img class="profilePic" src="../../projetoUCE%20BASE/Home/img/placeholder.jpg" alt="perfil">
                 <p class="">Tamiris</p>
             </a>
         </div>
