Adicionado .gitIgnore e pasta img movida para dentro da public.

--- a/views/CadastroPaciente/cadastroPaciente.ejs
+++ b/views/CadastroPaciente/cadastroPaciente.ejs
@@ -24,7 +24,7 @@
     <div class="barraLateral">
         <a href="" class="profileBackground">
             <p class="nome">
-                <img class="profilePic" src="/img/placeholder.jpg" alt="perfil">
+                <img class="profilePic" src="/public/img/placeholder.jpg" alt="perfil">
                 <p class="">Tamiris</p>
             </p>
         </a>
@@ -42,7 +42,7 @@
         <h1 class="titulo">Cadastro Paciente</h1>
 
         <div id="img-perfil">
-            <img src="/img/user-image.png" alt="" id="img-img">
+            <img src="/public/img/user-image.png" alt="" id="img-img">
         </div> 
         <hr>
 
