--- a/views/ListagemPaciente/listagemPaciente.ejs
+++ b/views/ListagemPaciente/listagemPaciente.ejs
@@ -25,7 +25,7 @@
     <div class="barraLateral">
         <a href="" class="profileBackground">
             <p class="nome">
-                <img class="profilePic" src="/img/placeholder.jpg" alt="perfil">
+                <img class="profilePic" src="/public/img/placeholder.jpg" alt="perfil">
                 <p class="">Tamiris</p>
             </p>
         </a>
@@ -47,7 +47,7 @@
 
         <div class="paciente">
             <!-- Imagem do perfil do paciente -->
-            <img src="/img/Ellipse%203.png" alt="" id="img-patient">
+            <img src="/public/img/Ellipse%203.png" alt="" id="img-patient">
             <!-- Nome da pessoa -->
             <div class="nome-paciente">
                 <a href=""> <p style="font-size: x-large;">Sonia Rodrigues | 58a</p> </a>
