--- a/views/base/base.ejs
+++ b/views/base/base.ejs
@@ -22,7 +22,7 @@
     <div class="barraLateral">
         <a href="" class="profileBackground">
             <p class="nome">    
-                <img class="profilePic" src="/img/placeholder.jpg" alt="perfil">
+                <img class="profilePic" src="/public/img/placeholder.jpg" alt="perfil">
                 <p class="">Tamiris</p>
             </p>
         </a>
