--- a/public/css/base.css
+++ b/public/css/base.css
@@ -92,7 +92,7 @@ body {
 
 
 .navegacao {
-    /* cadastroPaciente */
+    /* cadastroPacientes */
     list-style: none;
     position: absolute;
     width: 150px;
