--- a/views/Login/login.ejs
+++ b/views/Login/login.ejs
@@ -34,7 +34,7 @@
         </div>
 
         <button type="submit" class="button-entrar">Entrar</button>
-        <a href="#" id="forgot-password">Esqueci minha senha</a>
+        <a href="esqueci-senha" id="forgot-password">Esqueci minha senha</a>
     </form>
 </div>
 </body>
