--- a/views/RecuperarSenha/esqueci-senha.ejs
+++ b/views/RecuperarSenha/esqueci-senha.ejs
@@ -3,17 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Esqueci Minha Senha</title>
+    <title>Patient Control - Esqueci Minha Senha</title>
+    <link rel="stylesheet" href="/css/redefinirSenha.css">
 </head>
 <body>
 <h1>Esqueci Minha Senha</h1>
 
 <% if (typeof error !== 'undefined') { %>
-    <div style="color: red;"><%= error %></div>
+    <div id="error_message"><%= error %></div>
 <% } %>
 
 <% if (typeof success !== 'undefined') { %>
-    <div style="color: green;"><%= success %></div>
+    <div id="success_message">
+        <h3><%= success %></h3>
+    </div>
 <% } %>
 
 <form action="/esqueci-senha" method="POST">
