Página de cadastro de pacientes criada.

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -287,21 +287,21 @@ body {
 }
 
 .field_login {
-    position: relative;  /* Certifica que a caixa de sugestões será posicionada corretamente */
+    position: relative;
 }
 
 .suggestions-box {
     position: absolute;
-    top: 100%;  /* Posiciona logo abaixo do input */
+    top: 100%;
     left: 0;
     border: 1px solid #ccc;
     max-height: 150px;
     overflow-y: auto;
     background-color: white;
     z-index: 1000;
-    width: 100%;  /* Define a largura da caixa de sugestões igual à do input */
+    width: 100%;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    display: none;  /* Inicialmente oculta */
+    display: none;
 }
 
 .suggestion-item {
@@ -321,9 +321,6 @@ body {
 .suggestions-box div:hover {
     background-color: #f0f0f0;
 }
-
-
-
 
 @media (max-width: 1024px) {
     .layout {
