Adicionada integração na rota de cadastro de pessoas.

--- a/views/CadastroPaciente/cadastroPaciente.ejs
+++ b/views/CadastroPaciente/cadastroPaciente.ejs
@@ -43,7 +43,7 @@
                 <div class="linha-insert">
                     <div class="input-group">
                         <label for="dt-nasc">Data de Nascimento:</label>
-                        <input type="date" id="input-dt-nasc" name="dt-nasc" required>
+                        <input type="date" id="input-dt-nasc" name="data_nascimento" required>
                     </div>
 
                     <div class="input-group">
@@ -60,22 +60,22 @@
                 <div class="text-area-container">
                     <div class="input-group">
                         <label for="hpp">HPP (Histórico Patológico Pregresso):</label>
-                        <textarea name="hpp" id="hpp" rows="4" style="width: 97.6%;" required></textarea>
+                        <textarea name="hpp" id="hpp" rows="4" style="width: 97.6%;"></textarea>
                     </div>
 
                     <div class="input-group">
                         <label for="hma">HMA (História da Moléstia Atual):</label>
-                        <textarea name="hma" id="hma" rows="4" style="width: 97.6%;" required></textarea>
+                        <textarea name="hma" id="hma" rows="4" style="width: 97.6%;"></textarea>
                     </div>
 
                     <div class="input-group">
                         <label for="diag-clinic">Diagnóstico Clínico:</label>
-                        <textarea name="diag-clinic" id="diag-clinic" rows="4" style="width: 97.6%;" required></textarea>
+                        <textarea name="diag-clinic" id="diag-clinic" rows="4" style="width: 97.6%;"></textarea>
                     </div>
 
                     <div class="input-group">
                         <label for="diag-fisio">Diagnóstico Fisioterapêutico:</label>
-                        <textarea name="diag-fisio" id="diag-fisio" rows="4" style="width: 97.6%;" required></textarea>
+                        <textarea name="diag-fisio" id="diag-fisio" rows="4" style="width: 97.6%;"></textarea>
                     </div>
 
                     <div class="input-group">
@@ -93,7 +93,6 @@
                             <button type="submit" class="btn-save">Salvar</button>
                         </div>
                     </div>
-                </div>
             </form>
         </div>
     </div>
