--- a/views/base/base.ejs
+++ b/views/base/base.ejs
@@ -21,7 +21,7 @@
         </div>
 
         <nav class="nav">
-            <a href="#" class="nav-link">Cadastro Paciente</a>
+            <a href="/cadastroPaciente" class="nav-link">Cadastro Paciente</a>
             <a href="#" class="nav-link">Relatórios</a>
             <a href="#" class="nav-link">Consultas</a>
         </nav>
