--- a/views/Login/login.ejs
+++ b/views/Login/login.ejs
@@ -5,11 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Patient Control - Login</title>
     <link rel="stylesheet" href="/css/login.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
 </head>
 <body>
-<header id="cabecalho">
-    <h1>Patient Control</h1>
-</header>
+<!-- <header id="cabecalho"> -->
+<!--     <h1>Patient Control</h1> -->
+<!-- </header> -->
+
+    <header class="cabecalho">
+        <a href="" id="help"><span class="material-icons">help</span></a>
+        <h1 class="titulo-header">Patient Control</h1>
+    </header>
 
 <div class="container">
     <% if (typeof error !== 'undefined') { %>
@@ -17,18 +24,18 @@
     <% } %>
 
     <form action="/login" method="POST" id="form-login">
-        <h1 id="titulo-login">LOGIN</h1>
+        <h2 id="titulo-login">LOGIN</h2>
 
         <div class="main_field_login">
             <div class="field_login">
-                <label for="email" id="lb-email">Email:
-                    <input type="text" id="email" name="email" required>
+                <label for="email" id="lb-email">Email: <br>
+                    <input placeholder="Digite seu e-mail" type="text" id="email" name="email" required>
                 </label>
             </div>
 
             <div class="field_login">
-                <label for="senha" id="lb-pass">Senha:
-                    <input type="password" id="senha" name="senha" required>
+                <label for="senha" id="lb-pass">Senha: <br>
+                    <input placeholder="Digite sua senha" type="password" id="senha" name="senha" required>
                 </label>
             </div>
         </div>
