Inserção da página de redefinir senha e recuperação de conta e ajuste na tela de login2.

--- a/views/redefinirSenha/redefinirSenha.ejs
+++ b/views/redefinirSenha/redefinirSenha.ejs
@@ -9,15 +9,17 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
 </head>
 <body>
+
     <header class="cabecalho">
         <a href="" id="help"><span class="material-icons">help</span></a>
         <h1 class="titulo-header">Patient Control </h1>
     </header>
 
+
     <div class="container">
         <form action="/redefinir" method="POST" id="form-redefinir">
             <div>
-            <h2 id="titulo-redefinir-senha">REDEFINIR SENHA</h2>
+            <h2 id="titulo-redefinirSenha">REDEFINIR SENHA</h2>
         </div>
 
             <div class="main_field_redefinir">
