--- a/public/css/recuperarConta.css
+++ b/public/css/recuperarConta.css
@@ -1,13 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 
-.titulo-recuperar{
-    color: rgba(93, 155, 155);
+#titulo-recuperar{
+    margin-bottom: 2rem;
+    color: rgb(93, 155, 155);
 }
 
-#titulo-recuperar {
-    margin-bottom: 2rem;
-    color: rgba(93, 155, 155);
-}
 
 .container {
     display: flex;
@@ -61,7 +58,6 @@ label {
 
 .btn-enviar {
     width: 10rem;
-    margin: 1rem 0 0 0;
     padding: 0.8rem;
     border: none;
     border-radius: 10px;
