--- a/public/css/redefinirSenha.css
+++ b/public/css/redefinirSenha.css
@@ -1,12 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 
-.titulo-redefinir{
-    color: rgba(93, 155, 155);
-}
-
-#titulo-redefinir-senha {
+#titulo-redefinirSenha {
     margin-bottom: 2rem;
     color: rgb(93, 155, 155);
+
 }
 
 .container {
@@ -60,7 +57,6 @@ label {
 
 .btn-confirmar {
     width: 10rem;
-    margin: 1rem 0 0 0;
     padding: 0.8rem;
     border: none;
     border-radius: 10px;
