Adicionada visualização do agendamento e preço na tabela de agendamentos.

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -327,6 +327,67 @@ body {
     background-color: #f0f0f0;
 }
 
+.carousel-container {
+    display: flex;
+    align-items: center;
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+}
+
+.carousel-track {
+    display: flex;
+    transition: transform 0.3s ease-in-out;
+    width: calc(100% * 3);
+}
+
+.appointments {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+}
+
+.appointment {
+    background-color: rgb(215, 215, 215);
+    padding: 15px;
+    min-width: 200px; /* Definir um tamanho mínimo para cada item */
+    flex: 0 0 30%;
+    border-radius: 10px;
+    margin-right: 10px;
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s ease;
+}
+
+.carousel-prev, .carousel-next {
+    background-color: #93D4D4;
+    border: none;
+    color: white;
+    font-size: 24px;
+    padding: 10px;
+    cursor: pointer;
+    border-radius: 50%;
+    z-index: 10;
+}
+
+.carousel-prev:hover, .carousel-next:hover {
+    background-color: #77b4b4;
+}
+
+.carousel-prev {
+    position: absolute;
+    left: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.carousel-next {
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+
 @media (max-width: 1024px) {
     .layout {
         flex-direction: column;
