Adicionada a integração da pagina recuperar senha com a função (erro na redefinição de senha)

--- a/views/redefinirSenha/redefinirSenha.ejs
+++ b/views/redefinirSenha/redefinirSenha.ejs
@@ -15,7 +15,7 @@
     </header>
 
     <div class="container">
-        <form action="/redefinir" method="POST" id="form-redefinir">
+        <form action="/redefinir-senha" method="POST" id="form-redefinir">
             <div>
             <h2 id="titulo-redefinir-senha">REDEFINIR SENHA</h2>
         </div>
