--- a/views/Login/login.ejs
+++ b/views/Login/login.ejs
@@ -41,7 +41,7 @@
         </div>
 
         <button type="submit" class="button-entrar">Entrar</button>
-        <a href="/esqueci-senha" id="forgot-password">Esqueci minha senha</a>
+        <a href="/recuperarConta" id="forgot-password">Esqueci minha senha</a>
     </form>
 </div>
 </body>
